// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Functions autocomplete autocomplete simple snapshot with =S 1`] = `
<div
  class="o-autocomplete-dropdown"
>
  <div
    class="d-flex flex-column text-start o-autocomplete-value-focus"
  >
    <div
      class="o-autocomplete-value text-truncate"
    >
      <span
        class="o-semi-bold"
        style="color: #9B359B;"
      >
        S
      </span>
      <span
        style="color: inherit;"
      >
        UM
      </span>
      
    </div>
    <div
      class="o-autocomplete-description text-truncate"
    >
      do sum
    </div>
    
  </div>
  <div
    class="d-flex flex-column text-start"
  >
    <div
      class="o-autocomplete-value text-truncate"
    >
      <span
        class="o-semi-bold"
        style="color: #9B359B;"
      >
        S
      </span>
      <span
        style="color: inherit;"
      >
        ZZ
      </span>
      
    </div>
    
  </div>
  
</div>
`;

exports[`composer Assistant render above the cell when not enough place below 1`] = `
<div
  class="o-composer-assistant shadow"
  style="min-width:96px; width:300px; max-height:150px; top:-3px; transform:translate(0, -100%); right:0px; "
>
  <div
    class="o-autocomplete-dropdown"
  >
    <div
      class="d-flex flex-column text-start o-autocomplete-value-focus"
    >
      <div
        class="o-autocomplete-value text-truncate"
      >
        <span
          class="o-semi-bold"
          style="color: #9B359B;"
        >
          S
        </span>
        <span
          style="color: inherit;"
        >
          UM
        </span>
        
      </div>
      <div
        class="o-autocomplete-description text-truncate"
      >
        do sum
      </div>
      
    </div>
    <div
      class="d-flex flex-column text-start"
    >
      <div
        class="o-autocomplete-value text-truncate"
      >
        <span
          class="o-semi-bold"
          style="color: #9B359B;"
        >
          S
        </span>
        <span
          style="color: inherit;"
        >
          ZZ
        </span>
        
      </div>
      
    </div>
    
  </div>
  
  
</div>
`;

exports[`composer Assistant render below the cell by default 1`] = `
<div
  class="o-composer-assistant shadow"
  style="min-width:96px; width:300px; max-height:327px; "
>
  <div
    class="o-autocomplete-dropdown"
  >
    <div
      class="d-flex flex-column text-start o-autocomplete-value-focus"
    >
      <div
        class="o-autocomplete-value text-truncate"
      >
        <span
          class="o-semi-bold"
          style="color: #9B359B;"
        >
          S
        </span>
        <span
          style="color: inherit;"
        >
          UM
        </span>
        
      </div>
      <div
        class="o-autocomplete-description text-truncate"
      >
        do sum
      </div>
      
    </div>
    <div
      class="d-flex flex-column text-start"
    >
      <div
        class="o-autocomplete-value text-truncate"
      >
        <span
          class="o-semi-bold"
          style="color: #9B359B;"
        >
          S
        </span>
        <span
          style="color: inherit;"
        >
          ZZ
        </span>
        
      </div>
      
    </div>
    
  </div>
  
  
</div>
`;
